--- a/RoadWarrior/app/src/main/res/values/strings.xml
+++ b/RoadWarrior/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="select">Select</string>
     <string name="live">Live</string>
     <string name="latlong">Location</string>
+    <string name="viewfile">View File</string>
 </resources>
